# Foodcoop

./: .gitignore  AGENTS.md  CMakeLists.txt  CODE_OF_CONDUCT.md  README.md  fetch_test.cpp
.github/workflows/: build.yml
src/: DatabaseManager.cpp  DatabaseManager.h  FirstRunDialog.cpp  FirstRunDialog.h  PlotWindow.cpp  PlotWindow.h  PriceFetcher.cpp  PriceFetcher.h  SettingsDialog.cpp  SettingsDialog.h  TrendDetector.cpp  TrendDetector.h  main.cpp
translations/: foodcoop_de.ts  foodcoop_en.ts  foodcoop_fr.ts  foodcoop_it.ts
